--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "design-language-system",
   "version": "0.0.1",
   "main": "index.js",
+  "private": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/linode/design-language-system/issues"
   },
-  "homepage": "https://github.com/linode/design-language-system#readme"
+  "homepage": "https://github.com/linode/design-language-system#readme",
+  "devDependencies": {
+    "style-dictionary": "^3.7.2"
+  }
 }
