--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,5 +20,6 @@ jobs:
       - run: npx style-dictionary build
       - uses: JS-DevTools/npm-publish@v2
         with:
+          access: public
           # dry-run: true
           token: ${{ secrets.NPM }}
