--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "types": "build/index.d.ts",
   "private": false,
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts",
+    "build": "tsup src/index.ts --format esm --dts --minify terser",
     "generate": "yarn clean && node ./build.js && yarn build",
     "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -35,6 +35,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "terser": "^5.17.1",
     "tsup": "^6.7.0",
     "typescript": "*"
   }
