--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "types": "build/index.d.ts",
   "private": false,
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts",
-    "generate": "node ./build.js",
+    "build": "tsup src/index.ts --format esm --dts --minify terser",
+    "generate": "yarn clean && node ./build.js && yarn build",
     "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,7 +28,15 @@
     "style-dictionary": "^3.7.2"
   },
   "devDependencies": {
+    "@types/node": "^18.16.1",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "terser": "^5.17.1",
     "tsup": "^6.7.0",
-    "typescript": "^5.0.4"
+    "typescript": "*"
   }
 }
