--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "private": false,
+  "type": "module",
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts --minify terser",
-    "generate": "yarn clean && ts-node ./build.js && yarn build",
+    "generate": "yarn clean && ts-node --esm ./build.ts && yarn build",
     "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -38,6 +39,6 @@
     "terser": "^5.17.1",
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
-    "typescript": "*"
+    "typescript": "^5.0.4"
   }
 }
