Work In Progress

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "module": "ES2020",
+    "module": "esnext",
+    "target": "esnext",
     "esModuleInterop": true,
     // Read JS files, as they are typically ignored as source files
     "allowJs": true,
@@ -9,7 +10,8 @@
     // Only compile and output d.ts files
     "emitDeclarationOnly": true,
     // The directory to place types. Removing this would result in the .d.ts files being located alongside the corresponding .js files.
-    // "outDir": "dist",
+    "outDir": "dist/test",
+    "declarationDir": "dist/test",
     // Navigate to the JavaScript file associated with a specific module or function using IDE functions such as "Go to Definition" in VSCode
     "declarationMap": true,
     "moduleResolution": "node"
