--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "type": "module",
   "scripts": {
-    "build": "tsup config/index.ts --format esm --dts --minify terser",
+    "build": "tsup config/index.ts --format esm --dts --minify terser --outDir dist/cloudmanager",
     "generate": "yarn clean && ts-node --esm config/build.ts && yarn build",
     "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
