--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,5 @@ jobs:
       - uses: JS-DevTools/npm-publish@v2
         with:
           access: public
-          dry-run: true
+          dry-run: false
           token: ${{ secrets.NPM }}
