feat: Add ESM and better typescript support (#9)
Co-authored-by: Jaalah Ramos <jaalah.ramos@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true
-  }
+    "module": "esnext",
+    "target": "esnext",
+    "esModuleInterop": true,
+    "allowJs": true,
+    "moduleResolution": "node"
+  },
+  "exclude": ["config", "dist", "node_modules"]
 }
