--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@linode/design-language-system",
-  "version": "0.0.2",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
+  "version": "0.0.4",
   "private": false,
+  "type": "module",
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts --minify terser",
-    "generate": "yarn clean && node ./build.js && yarn build",
+    "build": "tsup",
+    "generate": "yarn clean && ts-node --esm config/build.ts && yarn build",
     "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -30,13 +29,14 @@
   "devDependencies": {
     "@types/node": "^18.16.1",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint": "^8.0.1",
     "terser": "^5.17.1",
+    "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
-    "typescript": "*"
+    "typescript": "^5.0.4"
   }
 }
