--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
           node-version: "18.14"
           registry-url: https://registry.npmjs.org/
 
-      - run: npm ci
-      - run: npm run generate
+      - run: yarn ci
+      - run: yarn run generate
       - uses: JS-DevTools/npm-publish@v2
         with:
           access: public
