--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@linode/design-language-system",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "private": false,
   "type": "module",
   "exports": {
-    "./*": "./dist/*/index.js"
+    "./*": "./dist/index.js"
   },
   "typesVersions": {
     "*": {
       "*": [
-        "./dist/*/index.d.ts"
+        "./dist/index.d.ts"
       ]
     }
   },
