Fix exports and typesVersions

--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "private": false,
   "type": "module",
   "exports": {
-    "./*": "./dist/index.js"
+    "./*": "./dist/*/index.js"
   },
   "typesVersions": {
     "*": {
       "*": [
-        "./dist/index.d.ts"
+        "./dist/index.d.ts",
+        "./dist/theme.d.ts",
+        "./dist/tokens.d.ts"
+      ],
+      "dark/*": [
+        "./dist/dark/index.d.ts",
+        "./dist/dark/theme.d.ts",
+        "./dist/dark/tokens.d.ts"
       ]
     }
   },
