--- a/package.json
+++ b/package.json
@@ -3,20 +3,16 @@
   "version": "0.0.13",
   "private": false,
   "type": "module",
+  "module": "dist/index.js",
   "exports": {
+    ".": "./dist/index.js",
     "./*": "./dist/*/index.js"
   },
   "typesVersions": {
     "*": {
       "*": [
         "./dist/index.d.ts",
-        "./dist/theme.d.ts",
-        "./dist/tokens.d.ts"
-      ],
-      "dark/*": [
-        "./dist/dark/index.d.ts",
-        "./dist/dark/theme.d.ts",
-        "./dist/dark/tokens.d.ts"
+        "./dist/*/index.d.ts"
       ]
     }
   },
