--- a/package.json
+++ b/package.json
@@ -37,19 +37,20 @@
   },
   "homepage": "https://github.com/linode/design-language-system#readme",
   "dependencies": {
+    "@tokens-studio/sd-transforms": "^0.12.2",
     "style-dictionary": "^3.7.2"
   },
   "devDependencies": {
     "@types/node": "^18.16.1",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint": "^8.0.1",
     "prettier": "^2.8.8",
     "terser": "^5.17.1",
     "ts-node": "^10.9.1",
