--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@linode/design-language-system",
   "version": "1.1.0",
-  "private": false,
   "type": "module",
   "module": "dist/index.js",
   "exports": {
@@ -18,9 +17,11 @@
   },
   "scripts": {
     "build": "tsup",
-    "generate": "yarn clean && ts-node --esm config/build.ts && yarn build",
     "clean": "rm -rf dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "generate": "yarn clean && ts-node --esm config/build.ts && yarn build",
+    "storybook": "storybook dev -p 6007",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-storybook": "storybook build"
   },
   "repository": {
     "type": "git",
@@ -38,10 +39,23 @@
   "homepage": "https://github.com/linode/design-language-system#readme",
   "dependencies": {
     "@tokens-studio/sd-transforms": "^0.12.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "style-dictionary": "^3.7.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.6.6",
+    "@storybook/addon-interactions": "^7.6.6",
+    "@storybook/addon-links": "^7.6.6",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.6",
+    "@storybook/react": "~7.6.4",
+    "@storybook/react-vite": "^7.6.4",
+    "@storybook/test": "^7.6.6",
+    "@storybook/theming": "~7.6.4",
     "@types/node": "^18.16.1",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.0.1",
@@ -51,10 +65,14 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "prettier": "^2.8.8",
+    "storybook": "^7.6.6",
     "terser": "^5.17.1",
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
-    "typescript": "^5.0.4"
-  }
+    "typescript": "^5.0.4",
+    "vite": "^5.0.7"
+  },
+  "packageManager": "yarn@4.0.2"
 }
