feat: Update Structure for Figma Variables  (#30)
Co-authored-by: Jaalah Ramos <jaalah.ramos@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
+    "jsx": "react",
     "module": "esnext",
     "target": "esnext",
     "esModuleInterop": true,
     "allowJs": true,
+    "checkJs": true,
     "moduleResolution": "node"
   },
   "exclude": ["config", "dist", "node_modules"]
