--- a/tokens/components/bars/appbar.json
+++ b/tokens/components/bars/appbar.json
@@ -1,7 +1,7 @@
 {
   "component": {
     "appbar": {
-      "backround": {
+      "background": {
         "value": "{alias.background.neutral}",
         "type": "color"
       },
@@ -11,6 +11,10 @@
       },
       "text": {
         "value": "{alias.content.text.primary.default}",
+        "type": "color"
+      },
+      "icon": {
+        "value": "{alias.content.icon.primary.default}",
         "type": "color"
       }
     }
