--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4",
-    "vite": "^5.0.7"
+    "vite": "^5.1.4"
   },
-  "packageManager": "yarn@4.0.2"
+  "volta": {
+    "node": "18.14.1"
+  }
 }
