--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "module": "dist/index.js",
   "exports": {
     ".": "./dist/index.js",
-    "./*": "./dist/*/index.js"
+    "./*": "./dist/*/index.js",
+    "./themes/*": "./dist/themes/*/index.js"
   },
   "typesVersions": {
     "*": {
