--- a/package.json
+++ b/package.json
@@ -6,14 +6,29 @@
   "exports": {
     ".": "./dist/index.js",
     "./*": "./dist/*/index.js",
-    "./themes/*": "./dist/themes/*/index.js"
+    "./themes/*": "./dist/themes/*/index.js",
+    "./themes/*/components/": "./dist/themes/*/components/index.js",
+    "./themes/*/globals/": "./dist/themes/*/globals/index.js",
+    "./themes/*/aliases/": "./dist/themes/*/aliases/index.js"
   },
   "typesVersions": {
     "*": {
-      "*": [
-        "./dist/index.d.ts",
-        "./dist/*/index.d.ts"
-      ]
+      "*": ["./dist/index.d.ts"],
+      "./components/*": ["./dist/components/*"],
+      "./globals/*": ["./dist/globals/*"],
+      "./aliases/*": ["./dist/aliases/*"],
+      "themes/dark": ["./dist/themes/dark/index.d.ts"],
+      "themes/dark/components": ["./dist/themes/dark/components/index.d.ts"],
+      "themes/dark/globals": ["./dist/themes/dark/globals/index.d.ts"],
+      "themes/dark/aliases": ["./dist/themes/dark/aliases/index.d.ts"],
+      "themes/densedDark": ["./dist/themes/densedDark/index.d.ts"],
+      "themes/densedDark/components": ["./dist/themes/densedDark/components/index.d.ts"],
+      "themes/densedDark/globals": ["./dist/themes/densedDark/globals/index.d.ts"],
+      "themes/densedDark/aliases": ["./dist/themes/densedDark/aliases/index.d.ts"],
+      "themes/densedLight": ["./dist/themes/densedLight/index.d.ts"],
+      "themes/densedLight/components": ["./dist/themes/densedLight/components/index.d.ts"],
+      "themes/densedLight/globals": ["./dist/themes/densedLight/globals/index.d.ts"],
+      "themes/densedLight/aliases": ["./dist/themes/densedLight/aliases/index.d.ts"]
     }
   },
   "scripts": {
