feat: [M3-7995] - Improve typescript definitions and how we export tokens - pt. 2 (#38)
* Fix build errors

* saving...

* feat: [M3-7995] - Improve typescript definitions and how we export tokens

* Update readme

* Saving

* Saving

* Saving...

* Refactored build

* Saving...

* Update package.json

* Declare consts with interfaces in d.ts files

* Update readme

* More organization

* Bump version number

* Update stories, bump to latest yarn

* Remove es6 from js file name

---------

Co-authored-by: Jaalah Ramos <jaalah.ramos@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,18 @@
 {
   "compilerOptions": {
-    "jsx": "react",
-    "module": "esnext",
     "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
-    "allowJs": true,
-    "checkJs": true,
-    "moduleResolution": "Bundler"
+    "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
   },
-  "exclude": ["config", "dist", "node_modules"]
+  "include": [
+    "style-dictionary/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
