--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@tokens-studio/sd-transforms": "^0.15.2",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "style-dictionary": "4.0.0-prerelease.25"
   },
@@ -62,6 +63,7 @@
     "@storybook/theming": "^8.1.10",
     "@types/node": "^18.16.1",
     "@types/react": "^17.0.27",
+    "@types/react-copy-to-clipboard": "^5",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.59.9",
