--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,14 +31,31 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - run: npm ci
-      - run: npm run build-storybook
+
+      - name: Use Node.js v18.14.0
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18.14"
+
+      - uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Install Dependencies
+        run: yarn --frozen-lockfile
+
+      - run: yarn build-storybook
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: "./storybook-static"
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
