fix gh pages workflow

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Install Dependencies
         run: yarn --frozen-lockfile
 
+      - run: yarn run generate
       - run: yarn build-storybook
 
       - name: Setup Pages
