--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
   },
   "homepage": "https://github.com/linode/design-language-system#readme",
   "dependencies": {
-    "@tokens-studio/sd-transforms": "^0.15.2",
+    "@tokens-studio/sd-transforms": "1.2.0",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
-    "style-dictionary": "4.0.0-prerelease.25"
+    "style-dictionary": "4.0.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.1.10",
