--- a/package.json
+++ b/package.json
@@ -45,13 +45,6 @@
     "url": "https://github.com/linode/design-language-system/issues"
   },
   "homepage": "https://github.com/linode/design-language-system#readme",
-  "dependencies": {
-    "@tokens-studio/sd-transforms": "1.2.0",
-    "react": "^17.0.2",
-    "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^17.0.2",
-    "style-dictionary": "4.0.1"
-  },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.1.10",
     "@storybook/addon-interactions": "^8.1.10",
@@ -61,6 +54,7 @@
     "@storybook/react-vite": "^8.1.10",
     "@storybook/test": "^8.1.10",
     "@storybook/theming": "^8.1.10",
+    "@tokens-studio/sd-transforms": "1.2.0",
     "@types/node": "^18.16.1",
     "@types/react": "^17.0.27",
     "@types/react-copy-to-clipboard": "^5",
@@ -77,7 +71,11 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-storybook": "^0.8.0",
     "prettier": "^2.8.8",
+    "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "^17.0.2",
     "storybook": "^8.1.10",
+    "style-dictionary": "4.0.1",
     "terser": "^5.17.1",
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
