--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-storybook": "^0.8.0",
+    "husky": "^9.1.5",
     "prettier": "^2.8.8",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.1.0",
