--- a/tokens/components/bars/appbar.json
+++ b/tokens/components/bars/appbar.json
@@ -16,6 +16,10 @@
       "icon": {
         "value": "{alias.content.icon.primary.default}",
         "type": "color"
+      },
+      "topGradient": {
+        "value": "{global.color.gradient.default}",
+        "type": "color"
       }
     }
   }
