--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
   "scripts": {
     "clean": "rm -rf dist",
     "generate": "yarn clean && ts-node --esm style-dictionary/build.ts",
-    "storybook": "storybook dev -p 6007",
     "test": "vitest run",
-    "test:watch": "vitest",
-    "build-storybook": "storybook build"
+    "test:watch": "vitest"
   },
   "repository": {
     "type": "git",
@@ -41,42 +39,25 @@
   },
   "homepage": "https://github.com/linode/design-language-system#readme",
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/react": "^8.4.7",
-    "@storybook/react-vite": "^8.4.7",
-    "@storybook/test": "^8.4.7",
-    "@storybook/theming": "^8.4.7",
     "@testing-library/dom": "^10.4.0",
-    "@tokens-studio/sd-transforms": "1.2.0",
-    "@types/node": "^18.16.1",
-    "@types/react": "^18.3.5",
-    "@types/react-copy-to-clipboard": "^5.0.7",
-    "@types/react-dom": "^18.3.0",
+    "@tokens-studio/sd-transforms": "2.0.3",
+    "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
-    "@vitejs/plugin-react-swc": "^3.7.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-n": "^17.10.2",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-storybook": "^0.11.2",
     "husky": "^9.1.6",
     "prettier": "^3.3.3",
-    "react": "^18.3.1",
-    "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18.3.1",
-    "storybook": "^8.4.7",
-    "style-dictionary": "4.3.0",
+    "style-dictionary": "5.1.1",
     "terser": "^5.32.0",
     "ts-node": "^10.9.2",
-    "tsup": "^8.4.0",
+    "tsup": "^8.5.1",
     "typescript": "^5.6.2",
-    "vite": "^6.2.7",
-    "vitest": "^3.2.4"
+    "vite": "^7.3.0",
+    "vitest": "^4.0.16"
   },
   "resolutions": {
     "cookie": "^0.7.0",
@@ -84,7 +65,7 @@
     "esbuild": "^0.25.0"
   },
   "volta": {
-    "node": "18.18.0"
+    "node": "22.0.0"
   },
   "packageManager": "yarn@4.1.1"
 }
