--- a/package.json
+++ b/package.json
@@ -39,30 +39,25 @@
   },
   "homepage": "https://github.com/linode/design-language-system#readme",
   "devDependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@tokens-studio/sd-transforms": "2.0.3",
-    "@types/node": "^22.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.5.0",
-    "@typescript-eslint/parser": "^8.5.0",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-n": "^17.10.2",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^7.1.0",
-    "husky": "^9.1.6",
-    "prettier": "^3.3.3",
-    "style-dictionary": "5.1.1",
-    "terser": "^5.32.0",
+    "@testing-library/dom": "^10.4.1",
+    "@tokens-studio/sd-transforms": "^2.0.3",
+    "@types/node": "^25.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-n": "^17.23.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-promise": "^7.2.1",
+    "husky": "^9.1.7",
+    "prettier": "^3.7.4",
+    "style-dictionary": "^5.1.1",
+    "terser": "^5.44.1",
     "ts-node": "^10.9.2",
     "tsup": "^8.5.1",
-    "typescript": "^5.6.2",
+    "typescript": "^5.9.3",
     "vite": "^7.3.0",
     "vitest": "^4.0.16"
-  },
-  "resolutions": {
-    "cookie": "^0.7.0",
-    "nanoid": "^3.3.8",
-    "esbuild": "^0.25.0"
   },
   "volta": {
     "node": "22.0.0"
